A basic model has been created. Created and implemented IProductRepository, and created a fake repository

--- a/SportSrore/SportSrore.csproj
+++ b/SportSrore/SportSrore.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Home\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
