--- a/SportSrore/appsettings.json
+++ b/SportSrore/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Data": {
+    "SportStoreProducts": {
+      "ConnectionString": {
+        "DefaultConnection": "Server=(localbd)\\MSSQLLocalDB;Database=SporsStore;Trusted_connection=True;MultipleActiveResultSets=true"
+      }
+    }
+  }
+
 }
