--- a/SportSrore/appsettings.json
+++ b/SportSrore/appsettings.json
@@ -10,9 +10,8 @@
 
   "Data": {
     "SportStoreProducts": {
-      "ConnectionString": {
-        "DefaultConnection": "Server=(localbd)\\MSSQLLocalDB;Database=SporsStore;Trusted_connection=True;MultipleActiveResultSets=true"
-      }
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SportsStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+      
     }
   }
 
